--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                     <thead>
                       <tr>
                         <th>Train Name</th>
-                        <!-- <th>Destination</th> 
+                        <th>Destination</th> 
                         <th>Frequency(min)</th>
                         <th>Next Arrival</th>
-                        <th>Minutes Away</th>-->
+                        <th>Minutes Away</th>
                       </tr>
                     </thead>
                     <tbody id="train-table-rows">
@@ -59,8 +59,8 @@
             <!-- Here we create the text box for Train Name-->
             <div class="form-group">
               <label for="train">Train Name:</label>
-              <input type="text" class="form-control" id="trainName">
-            </div>
+              <input type="text" class="form-control form-field" id="train-name">
+            </div> 
             <!-- Here we capture train destinaton
             <div class="form-group">
                 <label for="destination">Destination:</label>
@@ -97,6 +97,6 @@
   crossorigin="anonymous"></script>
   <script src="https://www.gstatic.com/firebasejs/4.12.0/firebase.js"></script>
   <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-  <script type="text/javascript" src="assets/app.js"></script>
+  <script type="text/javascript" src="assets/app1.js"></script>
 </body>
 </html>
