html and js with more info

--- a/index.html
+++ b/index.html
@@ -61,24 +61,24 @@
               <label for="train">Train Name:</label>
               <input type="text" class="form-control form-field" id="train-name">
             </div> 
-            <!-- Here we capture train destinaton
+            <!-- Here we capture train destinaton-->
             <div class="form-group">
                 <label for="destination">Destination:</label>
                 <input type="text" class="form-control" id="destination">
-              </div>-->
+              </div>
             
 
-            <!-- Here we capture first train time
+            <!-- Here we capture first train time-->
             <div class="form-group">
               <label for="firstTrain">First Train Time:</label>
               <input type="text" class="form-control" id="firstTrain">
-            </div> -->
-
-            <!-- Here we capture Train Frequency 
+            </div> 
+            first-train-time
+            <!-- Here we capture Train Frequency -->
             <div class="form-group">
               <label for="frequency">Frequency(min):</label>
               <input type="text" class="form-control" id="frequency">
-            </div> -->
+            </div> 
 
             <!-- Here we have our submit -->
             <button type="button" class="btn btn-primary" id="submit">
